--- a/Insurance/Insurance.ipynb
+++ b/Insurance/Insurance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "max          9.000000e+00    4.999000e+03  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "[0 rows x 21 columns]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ykim\\AppData\\Local\\Temp\\ipykernel_23204\\1791938810.py:11: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\ykim\\AppData\\Local\\Temp\\ipykernel_75184\\1791938810.py:11: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  correlation_matrix = target_df.corr()\n"
      ]
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,14 +843,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ykim\\AppData\\Local\\Temp\\ipykernel_23204\\462073808.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\ykim\\AppData\\Local\\Temp\\ipykernel_75184\\462073808.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "(595316, 21)"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1482,10 +1482,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meaning_ful_corr 0.05555555555555555\n",
+      "Premium Amount          1.000000\n",
+      "Previous Claims         0.043884\n",
+      "Credit Score            0.022819\n",
+      "Health Score            0.013895\n",
+      "Annual Income           0.013108\n",
+      "Age                     0.005098\n",
+      "Vehicle Age             0.001779\n",
+      "Number of Dependents    0.000911\n",
+      "Insurance Duration      0.000219\n",
+      "Name: Premium Amount, dtype: float64\n",
+      "(384004, 19)\n",
+      "Index(['Age', 'Gender', 'Annual Income', 'Marital Status',\n",
+      "       'Number of Dependents', 'Education Level', 'Occupation', 'Health Score',\n",
+      "       'Location', 'Policy Type', 'Previous Claims', 'Vehicle Age',\n",
+      "       'Credit Score', 'Insurance Duration', 'Customer Feedback',\n",
+      "       'Smoking Status', 'Exercise Frequency', 'Property Type',\n",
+      "       'Premium Amount'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ykim\\AppData\\Local\\Temp\\ipykernel_75184\\1423421865.py:4: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  correation = df.corr()\n"
+     ]
+    }
+   ],
    "source": [
+    "df = pd.read_csv(\"raw_data/train.csv\")\n",
+    "df = df.dropna()\n",
+    "df = df.drop(columns= [\"Policy Start Date\", \"id\"])\n",
+    "correation = df.corr()\n",
+    "meaning_ful_corr =  1 / (len(df.columns) - 1)\n",
+    "print(f\"meaning_ful_corr {meaning_ful_corr}\")\n",
+    "print(correation[\"Premium Amount\"].abs().sort_values(ascending=False))\n",
+    "print(df.shape)\n",
+    "print(df.columns)\n",
+    "# log_target_df(target_df, target_column=\"Annual Income\")\n",
     "\n"
    ]
   },
